--- a/src/courses.html
+++ b/src/courses.html
@@ -19,8 +19,8 @@
     </head>
     
 <body>
-   <nav class="bg-green-100 px-10  py-5 border-gray-200 dark:bg-gray-900 w-full z-10">
-      <div class="px-4 py-2 flex flex-wrap items-center justify-between mx-auto ">
+   <nav class="bg-green-100 md:px-10 px-2  py-5 border-gray-200 dark:bg-gray-900 w-full z-10">
+      <div class="px-4 py-2 flex flex-wrap items-center  justify-between mx-auto ">
          <a href="index.html">
             <img src="./asset/logo1.png" alt="" />
           </a>
@@ -37,7 +37,7 @@
         </button>
         <div class="hidden w-full md:block md:w-auto " id="navbar-default">
          <ul
-           class="justify-center items-flex-start font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg  md:flex-row md:space-x-8 md:mt-0 md:border-0 ">
+           class="justify-center  items-flex-start font-medium flex flex-col p-4 md:p-0  border border-gray-100 rounded-lg  md:flex-row md:space-x-8 md:mt-0 md:border-0 ">
            <li>
              <a href="./index.html"
                class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-green-400 md:p-0 dark:text-white md:dark:hover:text-green-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
