--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 
 
   <title>Home</title>
+  <link rel="stylesheet" href="./indexStyle.css">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="./home_assets/main.css">
   <link href="/public/styles.css" rel="stylesheet">
@@ -66,7 +67,7 @@
           </li>
           <li>
             <a href="./courses.html">
-              <button class="bg-green-700 rounded-md text-white py-2 px-5">Course</button>
+              <button style="position:relative;bottom:.7rem;" class="bg-green-700 rounded-md text-white py-2 px-5">Courses</button>
             </a>
           </li>
         </ul>
@@ -78,15 +79,17 @@
   <!-- /header -->
 
   <!-- hero -->
-  <div class="md:px-10 bg-green-100 pt-4 md:pt-20 px-4  gap-4 grid md:grid-cols-1 lg:grid-cols-2  ">
+  <div 
+  style="padding:0 3rem"
+  class="md:px-10 bg-green-100 pt-4 md:pt-20 px-4  gap-4 grid md:grid-cols-1 lg:grid-cols-2  ">
     <div class="md:px-10 md:py-32 ">
       <div>
-        <h2 class="md:text-6xl space-x-5 text-4xl font-semibold">Welcome to ACASPEDIA</h2>
+        <h2 style="font-size:40px;line-height:48px;" class="md:text-6xl space-x-5 text-4xl font-semibold">Welcome to <span class="acaspedia">ACASPEDIA</span></h2>
       </div>
       <div class="my-5">
-        <span class="leading-7 text-md">
+        <span style="font-size: 23px;font-weight: 200;line-height:150%" class="leading-7 text-md">
           Your one-stop destination for all your PDF past
-          question needs!. Looking for a reliable source?,
+          question needs.Looking for a reliable source?
           look no further!
         </span>
       </div>
@@ -107,12 +110,12 @@
   </div>
 
   <div class="bg-gray-100 md:px-10 mx-auto items-center py-10 px-4">
-    <div class="text-center py-5">
+    <div style="padding:2rem 0" class="text-center py-5">
       <h1 class="text-3xl py-4 text-green-600 font-bold">BROWSER COURSE</h1>
       <span>Choose from a variety of past questions you’ll like to study</span>
     </div>
-    <div class="grid gap-6 grid-cols-1 md:grid-cols-2  lg:grid-cols-4">
-      <div class=" bg-green-800 rounded-xl">
+    <div style="padding: 0 3.4rem;" class="grid gap-6 grid-cols-1 md:grid-cols-2  lg:grid-cols-4">
+      <div  class=" bg-green-800 rounded-xl cardHeight">
         <div class="text-center text-white py-5 ">
           <h2 class="text-xl">MTH101</h2>
         </div>
@@ -148,7 +151,7 @@
 
     </div>
     <div class="flex justify-center my-10">
-      <button class="px-7 py-3 bg-green-500 text-white rounded-lg">View More</button>
+      <button style="position:relative;top:1rem;padding:1rem 3rem;" class="px-7 py-3 bg-green-500 text-white rounded-lg">View More</button>
     </div>
 
 
@@ -156,8 +159,7 @@
   </div>
 
   <div class="py-2  bg-green-600 text-white text-xl">
-    <marquee>Learn more with us . All years available . Past questions made available for you . Made by the student
-      council . Curriculum flexible to fit your time . Here for you . UniOsun, your place</marquee>
+    <marquee style="padding:.6rem 0;">Learn more with adequate past questions made available for you and Curriculum flexible to fit your time          ||             Created by <span style="color:#fff;" class="acaspedia">             Innovator's Circle.</span></marquee>
 
   </div>
   <div class="bg-gray-100 md:px-10 mx-auto text-center items-center py-10 px-4">
